# wallchat-server

./: Cargo.toml  README.md
src/: lib.rs
src/models/: channel.rs  message.rs  mod.rs  note.rs  tag.rs  topic.rs  user.rs
src/util/: crypto.rs
